syntax = "proto3";

option csharp_namespace = "NimbleFlowHub.Contracts";

import "google/protobuf/empty.proto";

package productHubPublisher;

service ProductHubPublisher {
  rpc PublishProductCreated (PublishProductValue) returns (google.protobuf.Empty);
  rpc PublishProductUpdated (PublishProductValue) returns (google.protobuf.Empty);
  rpc PublishManyProductsDeleted (PublishProductIds) returns (google.protobuf.Empty);
  rpc PublishProductDeleted (PublishProductId) returns (google.protobuf.Empty);
}

message PublishProductIds {
  repeated string ids = 1;
}

message PublishProductId {
  string id = 1;
}

message PublishProductValue {
  string id = 1;
  string title = 2;
  string description = 3;
  float price = 4;
  string image_url = 5;
  bool is_favorite = 6;
  string category_id = 7;
}